added background to Trotter-portfolio.html

--- a/Trotter-portfolio.html
+++ b/Trotter-portfolio.html
@@ -1,15 +1,17 @@
 <!doctype html>
 <html>
-<body>
-  <h1 id = "name">Tamara Trotter</h1>
+<style> body {background-color: Antiquewhite;  opacity: 0.5} </style>
+  <h1 style="color:red;background:pink;">Tamara Trotter</h1>
+  <body>
  </body>
+
  <nav>
 
    <a href ""> About </a>
     <a href ""> Contact </a>
 
  </nav>
- <h2> Home Page </h2>
+ <h2 style="color:purple;background:pink"> Home Page </h2>
  <img src= "https://i.pinimg.com/originals/53/36/89/533689335dd98812244c9af85e3393f8.jpg" alt= "two cute owls" width= 200>
  <img src= "https://i.pinimg.com/originals/e7/de/9d/e7de9d348a1ff4bf3414837e2f035b9c.jpg" alt= "purple owl" width= 200>
  <img src="https://vignette.wikia.nocookie.net/animal-jam-clans-1/images/3/34/Black_owl_by_feralkyn-d6byceb.png/revision/latest?cb=20161115005738" alt= "black owl" width= 200>
@@ -17,7 +19,7 @@
  <blockquote>Hello everyone, please read my block quote that I have enlisted on this page.<br> I can not wait until I am a coder extraordinaire </blockquote>
 
 <p>Please see below how I will achieve this goal:</p>
-<ol>
+<ol style="Color:GREEn">
   <li>I will complete my prework</li>
 <li>I will not sleep</li>
 <li>I will sometimes eat</li>
