--- a/Trotter-portfolio.html
+++ b/Trotter-portfolio.html
@@ -1,24 +1,39 @@
 <!doctype html>
 <html>
-<style> body {background-color: Antiquewhite;  opacity: 0.5} </style>
-  <h1 style="color:red;background:pink;">Tamara Trotter</h1>
-  <body>
- </body>
+<head>
+<div id = myname>
+  <h1>Tamara Trotter</h1>
 
+</div>
+<style type="text/css">
+.intro{color: purple; font-style: italic;}
+#myname{"color:red;
+background:pink;
+}
+
+</style>
+</head>
+<body style=  "background-color: Antiquewhite;  opacity: 100; } </body>
+
+<div>
  <nav>
 
    <a href ""> About </a>
     <a href ""> Contact </a>
 
  </nav>
+ </div>
+ <div>
  <h2 style="color:purple;background:pink"> Home Page </h2>
  <img src= "https://i.pinimg.com/originals/53/36/89/533689335dd98812244c9af85e3393f8.jpg" alt= "two cute owls" width= 200>
  <img src= "https://i.pinimg.com/originals/e7/de/9d/e7de9d348a1ff4bf3414837e2f035b9c.jpg" alt= "purple owl" width= 200>
  <img src="https://vignette.wikia.nocookie.net/animal-jam-clans-1/images/3/34/Black_owl_by_feralkyn-d6byceb.png/revision/latest?cb=20161115005738" alt= "black owl" width= 200>
 
+</div>
+
  <blockquote>Hello everyone, please read my block quote that I have enlisted on this page.<br> I can not wait until I am a coder extraordinaire </blockquote>
 
-<p>Please see below how I will achieve this goal:</p>
+<p class ="intro">Please see below how I will achieve this goal:</p>
 <ol style="Color:GREEn">
   <li>I will complete my prework</li>
 <li>I will not sleep</li>
@@ -27,9 +42,11 @@
 <li>I will then pass bootcamp</li>
 <li>Finally, I will sleep</li>
 </ol>
-<p> I am MORPHING into my spirit animal that is the most nocturnal the link will explain more </p>
+<p class ='intro'> I am MORPHING into my spirit animal that is the most nocturnal the link will explain more </p>
 
 <a href="http://www.owlworlds.com/"> MORE INFO ABOUT OWLS </a>
+
+</body>
 
 
  </html>
