--- a/Trotter-portfolio.html
+++ b/Trotter-portfolio.html
@@ -7,8 +7,10 @@
 </div>
 <style type="text/css">
 .intro{color: purple; font-style: italic;}
-#myname{"color:red;
-background:pink;
+
+li {color: Green;
+}
+#myname {Color:pink; background-color: purple;
 }
 
 </style>
@@ -34,7 +36,7 @@ background:pink;
  <blockquote>Hello everyone, please read my block quote that I have enlisted on this page.<br> I can not wait until I am a coder extraordinaire </blockquote>
 
 <p class ="intro">Please see below how I will achieve this goal:</p>
-<ol style="Color:GREEn">
+<ol>
   <li>I will complete my prework</li>
 <li>I will not sleep</li>
 <li>I will sometimes eat</li>
