--- a/Trotter-portfolio.html
+++ b/Trotter-portfolio.html
@@ -1,8 +1,9 @@
 <!doctype html>
 <html>
 <head>
+  <title>Tamara Trotter- GrandCircus Prework Portfolio - Home</title>
 <div id = myname>
-  <h1>Tamara Trotter</h1>
+<center><h1>Tamara Trotter</h1></center>
 
 </div>
 <style type="text/css">
@@ -18,12 +19,16 @@ li {color: Green;
 <body style=  "background-color: Antiquewhite;  opacity: 100; } </body>
 
 <div>
- <nav>
+   <nav>
+  <p>
+    <b>Home</b> |
 
-   <a href ""> About </a>
-    <a href ""> Contact </a>
+   <a href "./about.html"> About </a> |
+    <a href "./contact.html"> Contact </a>
 
+</p>
  </nav>
+
  </div>
  <div>
  <h2 style="color:purple;background:pink"> Home Page </h2>
@@ -47,6 +52,9 @@ li {color: Green;
 <p class ='intro'> I am MORPHING into my spirit animal that is the most nocturnal the link will explain more </p>
 
 <a href="http://www.owlworlds.com/"> MORE INFO ABOUT OWLS </a>
+
+
+
 
 </body>
 
