--- a/Trotter-portfolio.html
+++ b/Trotter-portfolio.html
@@ -18,18 +18,12 @@ li {color: Green;
 </head>
 <body style=  "background-color: Antiquewhite;  opacity: 100; } </body>
 
-<div>
-   <nav>
-  <p>
-    <b>Home</b> |
+<nav>
+  <a href = "Trotter-portfolio.html">Home</a> |
+  <a href = "about.html"> About </a> |
+    <a href = "contact.html"> Contact </a>
 
-   <a href "./about.html"> About </a> |
-    <a href "./contact.html"> Contact </a>
-
-</p>
- </nav>
-
- </div>
+  </nav>
  <div>
  <h2 style="color:purple;background:pink"> Home Page </h2>
  <img src= "https://i.pinimg.com/originals/53/36/89/533689335dd98812244c9af85e3393f8.jpg" alt= "two cute owls" width= 200>
