--- a/Trotter-portfolio.html
+++ b/Trotter-portfolio.html
@@ -11,10 +11,16 @@
 
 li {color: Green;
 }
-#myname {Color:pink; background-color: purple;
+#myname {Color:pink; background-color: purple;font-family: 'Indie Flower', cursive;
+}
+.img-circle {
+    border-radius: 50%;
+    box-shadow: 10px 10px 5px grey;
 }
 
+
 </style>
+<link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
 <body style=  "background-color: Antiquewhite;  opacity: 100; } </body>
 
@@ -26,9 +32,9 @@ li {color: Green;
   </nav>
  <div>
  <h2 style="color:purple;background:pink"> Home Page </h2>
- <img src= "https://i.pinimg.com/originals/53/36/89/533689335dd98812244c9af85e3393f8.jpg" alt= "two cute owls" width= 200>
- <img src= "https://i.pinimg.com/originals/e7/de/9d/e7de9d348a1ff4bf3414837e2f035b9c.jpg" alt= "purple owl" width= 200>
- <img src="https://vignette.wikia.nocookie.net/animal-jam-clans-1/images/3/34/Black_owl_by_feralkyn-d6byceb.png/revision/latest?cb=20161115005738" alt= "black owl" width= 200>
+ <img class = "img-circle" img src= "https://i.pinimg.com/originals/53/36/89/533689335dd98812244c9af85e3393f8.jpg" alt= "two cute owls" width= 200>
+  <img class = "img-circle" img src= "https://i.pinimg.com/originals/e7/de/9d/e7de9d348a1ff4bf3414837e2f035b9c.jpg" alt= "purple owl" width= 200>
+ <img class = "img-circle" img src="https://vignette.wikia.nocookie.net/animal-jam-clans-1/images/3/34/Black_owl_by_feralkyn-d6byceb.png/revision/latest?cb=20161115005738" alt= "black owl" width= 200></img>
 
 </div>
 
