--- a/contact.html
+++ b/contact.html
@@ -13,6 +13,7 @@ li {color: Green;
 #myname {Color:pink; background-color: purple;
 }
 
+
 </style>
 </head>
 <body style=  "background-color: Antiquewhite;  opacity: 100; } </body>
@@ -26,7 +27,13 @@ li {color: Green;
 
 
 <body>
-
+  <form>
+          First name: <input type="text" name="firstname" /> <br />
+          Last Name: <input type="text" name="lastname" /> <br />
+          Email: <input type="text" name="email" /> <br />
+          Phone: <input type="text" name="phone" /> <br />
+       <input type="submit" value= Submit Now /></p>
+  </form>
 </body>
 
 </html>
