--- a/about.html
+++ b/about.html
@@ -8,7 +8,7 @@
 <style type="text/css">
 .intro{color: purple; font-style: italic;}
 
-li {color: Green;
+li {color: purple;
 }
 #myname {Color:pink; background-color: purple;
 }
@@ -25,7 +25,15 @@ li {color: Green;
     </nav>
 
 <body>
+<center><p>WHATS UP GUYS!!! I AM TAMARA TROTTER AND I AM LOVING THIS CODING! IT IS EXTREMLY FUN!</p></center>
 
+<ul>
+  <li>I I love Food</li>
+<li>I LOVE travel</li>
+<li>I love Volleyball</li>
+<li>I want a puppy</li>
+<li>I love owls</li>
+<li>I got some sleep last night</li>
+</ul>
 </body>
-
 </html>
