Final Skeleton Portfolio

--- a/about.html
+++ b/about.html
@@ -12,10 +12,13 @@ li {color: purple;
 }
 #myname {Color:pink; background-color: purple;
 }
+body{
+ background: rgba(76, 175, 80, 0.1)
+ }
 
 </style>
 </head>
-<body style=  "background-color: Antiquewhite;  opacity: 100; } </body>
+<body>
 
   <nav>
     <a href = "Trotter-portfolio.html">Home</a> |
