--- a/Trotter-portfolio.html
+++ b/Trotter-portfolio.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html>
+<html lang= 'en'>
 <head>
   <title>Tamara Trotter- GrandCircus Prework Portfolio - Home</title>
 <div id = myname>
@@ -16,13 +16,22 @@ li {color: Green;
 .img-circle {
     border-radius: 50%;
     box-shadow: 10px 10px 5px grey;
+
+
 }
+body{
+ background: rgba(76, 175, 80, 0.1)
+ }
+
+  blockquote{
+    color:pink
+  }
 
 
 </style>
 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
-<body style=  "background-color: Antiquewhite;  opacity: 100; } </body>
+<body>
 
 <nav>
   <a href = "Trotter-portfolio.html">Home</a> |
@@ -30,15 +39,15 @@ li {color: Green;
     <a href = "contact.html"> Contact </a>
 
   </nav>
- <div>
+ <div><center>
  <h2 style="color:purple;background:pink"> Home Page </h2>
  <img class = "img-circle" img src= "https://i.pinimg.com/originals/53/36/89/533689335dd98812244c9af85e3393f8.jpg" alt= "two cute owls" width= 200>
   <img class = "img-circle" img src= "https://i.pinimg.com/originals/e7/de/9d/e7de9d348a1ff4bf3414837e2f035b9c.jpg" alt= "purple owl" width= 200>
  <img class = "img-circle" img src="https://vignette.wikia.nocookie.net/animal-jam-clans-1/images/3/34/Black_owl_by_feralkyn-d6byceb.png/revision/latest?cb=20161115005738" alt= "black owl" width= 200></img>
-
+</center>
 </div>
 
- <blockquote>Hello everyone, please read my block quote that I have enlisted on this page.<br> I can not wait until I am a coder extraordinaire </blockquote>
+<center> <blockquote>Hello everyone, please read my block quote that I have enlisted on this page.<br> I can not wait until I am a coder extraordinaire </blockquote></center>
 
 <p class ="intro">Please see below how I will achieve this goal:</p>
 <ol>
