--- a/Trotter-portfolio.html
+++ b/Trotter-portfolio.html
@@ -2,35 +2,15 @@
 <html lang= 'en'>
 <head>
   <title>Tamara Trotter- GrandCircus Prework Portfolio - Home</title>
-<div id = myname>
-<center><h1>Tamara Trotter</h1></center>
 
-</div>
-<style type="text/css">
-.intro{color: purple; font-style: italic;}
+<link rel="stylesheet" type= "text/css" href = "mystlyle.css">
 
-li {color: Green;
-}
-#myname {Color:pink; background-color: purple;font-family: 'Indie Flower', cursive;
-}
-.img-circle {
-    border-radius: 50%;
-    box-shadow: 10px 10px 5px grey;
-
-
-}
-body{
- background: rgba(76, 175, 80, 0.1)
- }
-
-  blockquote{
-    color:pink
-  }
-
-
-</style>
 <link href="https://fonts.googleapis.com/css?family=Indie+Flower" rel="stylesheet">
 </head>
+<div id = "myname">
+  <center><h1>Tamara Trotter</h1></center>
+</div>
+
 <body>
 
 <nav>
@@ -40,7 +20,7 @@ body{
 
   </nav>
  <div><center>
- <h2 style="color:purple;background:pink"> Home Page </h2>
+ <h2> Home Page </h2>
  <img class = "img-circle" img src= "https://i.pinimg.com/originals/53/36/89/533689335dd98812244c9af85e3393f8.jpg" alt= "two cute owls" width= 200>
   <img class = "img-circle" img src= "https://i.pinimg.com/originals/e7/de/9d/e7de9d348a1ff4bf3414837e2f035b9c.jpg" alt= "purple owl" width= 200>
  <img class = "img-circle" img src="https://vignette.wikia.nocookie.net/animal-jam-clans-1/images/3/34/Black_owl_by_feralkyn-d6byceb.png/revision/latest?cb=20161115005738" alt= "black owl" width= 200></img>
