--- a/about.html
+++ b/about.html
@@ -1,22 +1,9 @@
 <html>
 <head>
   <title>Tamara Trotter- GrandCircus Prework Portfolio -About</title>
-<div id = myname>
-<center><h1>About</h1></center>
+<center><h1 class = "headline">About</h1></center>
+<link rel="stylesheet" type= "text/css" href = "mystlyle.css">
 
-</div>
-<style type="text/css">
-.intro{color: purple; font-style: italic;}
-
-li {color: purple;
-}
-#myname {Color:pink; background-color: purple;
-}
-body{
- background: rgba(76, 175, 80, 0.1)
- }
-
-</style>
 </head>
 <body>
 
@@ -31,7 +18,7 @@ body{
 <center><p>WHATS UP GUYS!!! I AM TAMARA TROTTER AND I AM LOVING THIS CODING! IT IS EXTREMLY FUN!</p></center>
 
 <ul>
-  <li>I I love Food</li>
+  <li> I love Food</li>
 <li>I LOVE travel</li>
 <li>I love Volleyball</li>
 <li>I want a puppy</li>
