--- a/contact.html
+++ b/contact.html
@@ -1,20 +1,11 @@
 <html>
 <head>
   <title>Tamara Trotter- GrandCircus Prework Portfolio -Contact</title>
-<div id = myname>
-<center><h1>Contact</h1></center>
+<link rel="stylesheet" type= "text/css" href = "mystlyle.css">
+<center><h1 class = "headline">Contact</h1></center>
 
-</div>
 <style type="text/css">
-.intro{color: purple; font-style: italic;}
 
-li {color: Green;
-}
-#myname {Color:pink; background-color: purple;
-}
-body{
- background: rgba(76, 175, 80, 0.1)
- }
  h2{
    color: #0d1d2e;
    text-transform: uppercase;
